--- a/server/package.json
+++ b/server/package.json
@@ -13,11 +13,14 @@
     "gulp": "^4.0.0"
   },
   "dependencies": {
+    "formidable": "^1.2.1",
     "koa": "^2.6.2",
     "koa-body": "^4.0.4",
     "koa-pug": "^3.0.0-2",
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
+    "koa2-formidable": "^1.0.2",
+    "lowdb": "^1.0.0",
     "pug": "^2.0.3"
   }
 }
